# LangChain_testset_gen

./: .gitignore  README.md  evaluator.py  pyproject.toml  rag.py  日本国憲法.md
data/: docomo_edit.txt
