[project]
name = "rag-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-search-results>=2.4.2",
    "langchain>=0.3.27",
    "langchain-chroma>=0.1.0",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.35",
    "langsmith>=0.3.45",
    "nest-asyncio>=1.6.0",
    "numpy==1.26.4",
    "openai>=2.7.1",
    "python-dotenv>=1.2.1",
    "ragas>=0.3.8",
    "rapidfuzz>=3.0.0",
]
